# gpsdo-fw

./: CMakeLists.txt  MCU_TIMEKEEPING_IMPLEMENTATION.md  README.md  openocd.cfg
doc/: LadyHeather_TSIP_Integration.md
lib/: CMakeLists.txt
lib/stm32h5/: .mxproject  STM32H503-GPSDO.ioc
lib/stm32h5/Core/Inc/: flash_interface.h  main.h  main.h.bak  ramcfg.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
lib/stm32h5/Core/Src/: flash_interface.c  gpdma.c  gpio.c  main.c  main.c.bak  ramcfg.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c  tim.c  usart.c
lib/stm32h5/cmake/: gcc-arm-none-eabi.cmake
lib/stm32h5/cmake/stm32cubemx/: CMakeLists.txt
src/: frequency.c  gps.c  int.c  int.h  main.c  mcu_time.c  mcu_time.h  menu.c  menu.h  telem.c  telem.h
tools/: log_telem.py  plot_telem.py  uart_timing.py
